[gd_scene load_steps=27 format=3 uid="uid://q2grelqqkw5m"]

[ext_resource type="Script" uid="uid://y4dfkd5quihi" path="res://scripts/gameController.gd" id="1_estr2"]
[ext_resource type="Texture2D" uid="uid://y8fg71fr8b7o" path="res://spirtes/Game_Background_Industrial_Haste_Belt.png" id="3_l2kow"]
[ext_resource type="Script" uid="uid://cdqh3u4uhwnxp" path="res://scripts/scoreController.gd" id="4_4h7ej"]
[ext_resource type="Script" uid="uid://kiinvk6erjty" path="res://scripts/toolController.gd" id="4_8dw8u"]
[ext_resource type="Texture2D" uid="uid://c65cqdikpve5l" path="res://spirtes/Game_Background_Industrial_Haste.png" id="4_f0icx"]
[ext_resource type="Texture2D" uid="uid://cpjiscg32nlxc" path="res://spirtes/Placeholders/tapePlaceholder.webp" id="5_kmdbv"]
[ext_resource type="Texture2D" uid="uid://bkxrr1qqx1pkk" path="res://spirtes/Placeholders/wrenchPlaceholder.png" id="6_0t3xx"]
[ext_resource type="Texture2D" uid="uid://bvdbvea54eeu1" path="res://spirtes/Placeholders/boltsPlaceholder.jpg" id="7_kvb8l"]

[sub_resource type="LabelSettings" id="LabelSettings_i1jb3"]
font_size = 40
outline_size = 11
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8nqap"]
font_size = 40
outline_size = 11
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5mhgh"]
font_size = 40
font_color = Color(0, 1, 0.58333325, 1)
outline_size = 11
outline_color = Color(0, 1, 0.5500002, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dfih8"]
font_size = 40
font_color = Color(0.36078432, 1, 0.59607846, 1)
outline_size = 11
outline_color = Color(0, 0.5, 0.25, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n31k3"]
font_size = 40
font_color = Color(0.74, 1, 0.8830001, 1)
outline_size = 11
outline_color = Color(0, 0.26, 0.16900001, 1)

[sub_resource type="Animation" id="Animation_5mhgh"]
resource_name = "_score_gain"
length = 0.22
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.16666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [SubResource("LabelSettings_5mhgh"), SubResource("LabelSettings_dfih8"), SubResource("LabelSettings_n31k3"), SubResource("LabelSettings_8nqap")]
}

[sub_resource type="Animation" id="Animation_dfih8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("LabelSettings_8nqap")]
}

[sub_resource type="LabelSettings" id="LabelSettings_u4ox6"]
font_size = 40
font_color = Color(1, 0, 0, 1)
outline_size = 11
outline_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o8yur"]
font_size = 40
font_color = Color(1, 0.36, 0.36, 1)
outline_size = 11
outline_color = Color(0.5, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nu2g1"]
font_size = 40
font_color = Color(1, 0.74, 0.74, 1)
outline_size = 11
outline_color = Color(0.26, 0, 0, 1)

[sub_resource type="Animation" id="Animation_n31k3"]
resource_name = "_score_loss"
length = 0.22
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.16666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [SubResource("LabelSettings_u4ox6"), SubResource("LabelSettings_o8yur"), SubResource("LabelSettings_nu2g1"), SubResource("LabelSettings_8nqap")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jng41"]
_data = {
&"RESET": SubResource("Animation_dfih8"),
&"_score_gain": SubResource("Animation_5mhgh"),
&"_score_loss": SubResource("Animation_n31k3")
}

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_yxycf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5m38y"]
size = Vector2(0.9979884, 1.0301809)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4h7ej"]
bg_color = Color(0.42745098, 0.16470589, 0, 0.6117647)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8nqap"]
bg_color = Color(0.003921569, 0.003921569, 0, 0.8627451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkyfg"]
bg_color = Color(0.87, 0.536355, 0.35670003, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4h7ej"]
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="GameScreen" type="Node2D"]
process_mode = 3
script = ExtResource("1_estr2")

[node name="Camera" type="Camera2D" parent="."]
process_mode = 1

[node name="BoxSpawner" type="Node2D" parent="."]
process_mode = 1
position = Vector2(-753, 64)
scale = Vector2(1156.5, 144)

[node name="ConveyorBeltSprite" type="Sprite2D" parent="."]
process_mode = 1
z_index = 4
texture = ExtResource("3_l2kow")

[node name="Timer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
autostart = true

[node name="Background" type="Sprite2D" parent="."]
process_mode = 1
texture = ExtResource("4_f0icx")

[node name="Clock" type="Label" parent="."]
process_mode = 1
z_index = 8
offset_left = 408.0
offset_top = -312.0
offset_right = 567.0
offset_bottom = -257.0
text = "6:00"
label_settings = SubResource("LabelSettings_i1jb3")
horizontal_alignment = 2

[node name="ClockTimer" type="Timer" parent="Clock"]
autostart = true

[node name="Score" type="Label" parent="."]
offset_left = -568.0
offset_top = -314.0
offset_right = -440.0
offset_bottom = -259.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_8nqap")
horizontal_alignment = 1
script = ExtResource("4_4h7ej")

[node name="ScoreFlashes" type="AnimationPlayer" parent="Score"]
libraries = {
&"": SubResource("AnimationLibrary_jng41")
}

[node name="ToolBar" type="Node2D" parent="."]
process_mode = 1
z_index = 5
script = ExtResource("4_8dw8u")

[node name="TapeTool" type="Node2D" parent="ToolBar"]

[node name="TapeToolHeldSprite" type="Sprite2D" parent="ToolBar/TapeTool"]
z_index = 1
position = Vector2(-202.75002, 266.75)
scale = Vector2(0.30375004, 0.30375004)
texture = ExtResource("5_kmdbv")

[node name="TapeToolToolBar" type="Sprite2D" parent="ToolBar/TapeTool"]
position = Vector2(-201.875, 265.875)
scale = Vector2(124.250015, 124.25002)
texture = SubResource("PlaceholderTexture2D_yxycf")

[node name="Area2D" type="Area2D" parent="ToolBar/TapeTool/TapeToolToolBar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolBar/TapeTool/TapeToolToolBar/Area2D"]
position = Vector2(-0.0010056496, -0.015090466)
shape = SubResource("RectangleShape2D_5m38y")

[node name="WrenchTool" type="Node2D" parent="ToolBar"]

[node name="WrenchToolHeldSprite" type="Sprite2D" parent="ToolBar/WrenchTool"]
z_index = 1
position = Vector2(-3, 267)
scale = Vector2(0.33333337, 0.33333337)
texture = ExtResource("6_0t3xx")

[node name="WrenchToolToolBar" type="Sprite2D" parent="ToolBar/WrenchTool"]
position = Vector2(-1.875, 265.875)
scale = Vector2(124.250015, 124.25002)
texture = SubResource("PlaceholderTexture2D_yxycf")

[node name="Area2D" type="Area2D" parent="ToolBar/WrenchTool/WrenchToolToolBar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolBar/WrenchTool/WrenchToolToolBar/Area2D"]
position = Vector2(-0.0010056496, -0.015090466)
shape = SubResource("RectangleShape2D_5m38y")

[node name="BoltsTool" type="Node2D" parent="ToolBar"]

[node name="BoltsToolHeldSprite" type="Sprite2D" parent="ToolBar/BoltsTool"]
z_index = 1
position = Vector2(218.95, 265.5)
scale = Vector2(0.2997462, 0.3305556)
texture = ExtResource("7_kvb8l")

[node name="BoltsToolToolBar" type="Sprite2D" parent="ToolBar/BoltsTool"]
position = Vector2(221.125, 265.875)
scale = Vector2(124.250015, 124.25002)
texture = SubResource("PlaceholderTexture2D_yxycf")

[node name="Area2D" type="Area2D" parent="ToolBar/BoltsTool/BoltsToolToolBar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolBar/BoltsTool/BoltsToolToolBar/Area2D"]
position = Vector2(-0.0010056496, -0.015090466)
shape = SubResource("RectangleShape2D_5m38y")

[node name="HangingLight" type="Control" parent="."]
process_mode = 1
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -76.58992
offset_top = -450.12372
offset_right = -36.58992
offset_bottom = -410.12372
rotation = 0.012831296
pivot_offset = Vector2(76.83565, 4.9263)

[node name="LightOverlay" type="Panel" parent="HangingLight"]
z_index = 6
layout_mode = 0
offset_left = -757.0343
offset_top = -255.18434
offset_right = 1048.0292
offset_bottom = 1272.8054
rotation = -0.024121076
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4h7ej")

[node name="DarkRight" type="Panel" parent="HangingLight"]
z_index = 7
layout_mode = 0
offset_left = -35.585537
offset_top = -175.66516
offset_right = 1091.3223
offset_bottom = 1352.3246
rotation = -0.36183813
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8nqap")

[node name="DarkLeft" type="Panel" parent="HangingLight"]
z_index = 7
layout_mode = 0
offset_left = -318.6065
offset_top = 1234.3303
offset_right = 917.90704
offset_bottom = 2713.2803
rotation = -2.7962885
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8nqap")

[node name="PausedScreen" type="Panel" parent="."]
process_mode = 3
visible = false
z_index = 8
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jkyfg")

[node name="pausedText" type="Label" parent="PausedScreen"]
layout_mode = 0
offset_left = 470.0
offset_top = 95.0
offset_right = 668.0
offset_bottom = 137.0
text = "Game Paused"
label_settings = SubResource("LabelSettings_4h7ej")

[node name="ResumeButton" type="Button" parent="PausedScreen"]
layout_mode = 0
offset_left = 390.0
offset_top = 208.0
offset_right = 764.0
offset_bottom = 272.0
text = "Resume"

[node name="MainMenuButton" type="Button" parent="PausedScreen"]
layout_mode = 0
offset_left = 390.0
offset_top = 326.0
offset_right = 764.0
offset_bottom = 390.0
text = "Main Menu"

[node name="QuitButton" type="Button" parent="PausedScreen"]
layout_mode = 0
offset_left = 390.0
offset_top = 442.0
offset_right = 764.0
offset_bottom = 506.0
text = "Quit"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Clock/ClockTimer" to="." method="_second_passed"]
[connection signal="input_event" from="ToolBar/TapeTool/TapeToolToolBar/Area2D" to="ToolBar" method="_on_tool_clicked" binds= [1]]
[connection signal="input_event" from="ToolBar/WrenchTool/WrenchToolToolBar/Area2D" to="ToolBar" method="_on_tool_clicked" binds= [2]]
[connection signal="input_event" from="ToolBar/BoltsTool/BoltsToolToolBar/Area2D" to="ToolBar" method="_on_tool_clicked" binds= [3]]
[connection signal="pressed" from="PausedScreen/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausedScreen/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PausedScreen/QuitButton" to="." method="_on_quit_button_pressed"]
